--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,14 @@
   "description": "stubbed HUE api",
   "main": "index.js",
   "scripts": {
+    "server": "./node_modules/babel-cli/bin/babel-node.js --presets node6 ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mike van der Vet <mike@seventythree.cc> (http://www.seventythree.cc)",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-node6": "^11.0.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "fs": "0.0.1-security"
