--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
