--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
     "presets": ["es2015","es2017", "stage-0", "react"],
-    "plugins": ["syntax-async-functions","transform-regenerator","transform-runtime","react-hot-loader/babel"],
+    "plugins": ["transform-decorators-legacy","syntax-async-functions","transform-regenerator","transform-runtime","react-hot-loader/babel"],
 }
