--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
@@ -49,6 +50,7 @@
     "postcss-import": "^8.1.2",
     "postcss-loader": "^1.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "remote-redux-devtools": "^0.5.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
